Revision history for Perl extension Math::Polynomial::Solve.

2.62_2
     Nov 17 2011
	- Perl version requirement changed to 5.8.3 (from 5.6.0). Support
	  for 5.6.0 in various perl development tools is being dropped,
	  and 5.8.3 seems to be a safe minimum, at least for the next
	  year or so. Change made in Build.PL and Solve.pm.
	- Changed "repository" key in Build.PL from a hash to a string,
	  as seems to be currently required under the version of
	  Module::Build that I'm developing with (the hash form looks
	  to be for a later version that I cannot install yet).
2.61_1
     Oct 30 2011
	- A couple more changes to Build.PL (dist_author and resources).
	  Time to push this up to git and add it to CPAN.
     Sep 20 2011
	- CPAN::Meta::Spec had a lot to say about the changes to Build.PL
	  scripts. Made those changes.
     Sep 19 2011
	- The pre-September items for this version were done separate
	  from the git and github installation. Merged it all in.
     Sep 9 2011
	- Added carp messages to get_hessenberg() and set_hessenberg().
	  Now anyone still using these functions gets nagged about it.
     July 20 2011
	- Emphasize in the documentation the fact that roots are mixed
	  real and Math::Complex - there was some confusion.
     Mar 24 2011
	- Gah. EXPORT list didn't have poly_tolerance!
	- Put in a check for accidental refs in poly_derivaluate().
     Mar 23 2011
	- Test file nr.t created, and added to MANIFEST.
	- A couple more keywords added to Build.PL.
     Mar 12 2011
	- Added Newton-Raphson function newtonraphson() to the module, just
	  to provide a comparison with laguerre().
	- Added Newton-Raphson to the keyword list.
     Mar 9 2011
	- New function poly_derivaluate(), to be used internally by
	  laguerre(). Added it to the :utility EXPORT list.
	- laguerre() now uses poly_derivaluate().
	- Documented poly_derivaluate().
	- Fixed an L<> typo.
	- Improved the Sturm function documentation.
     Mar 2 2011